# PrintStash

./: .env.example  .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  UPGRADE.md  ca_profile.xml  dev_start.sh  docker-compose.build.yml  docker-compose.light.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0e80b5df82e2_baseline_schema.py  175be54ef975_print_job_cost_denormalized.py  1f9c2e7a4b6d_add_gcode_revision_fields.py  2b61f7e4a9c0_add_user_api_keys.py  3d0a4b5c6e7f_add_makerworld_3mf_only_config.py  4f0f8e06df71_printer_provider_and_bambu_fields.py  69b6a6d8a1d1_phase_4c_4d_lifecycle_audit.py  6f4a2c9d8e10_add_model_source_url.py  8ac4b31d82f3_add_refresh_tokens.py  9a1e5c7d3f02_scrub_audit_log_secrets.py  9d3a5c7e4b12_add_printer_profiles.py  a1b2c3d4e5f6_add_makerworld_token.py  a1c7e4f9b23d_system_config_jwt_secret.py  a1c7e9b4d2f3_add_spoolman.py  a1e5d8c4f2b7_add_browse_sort_indexes.py  a3f1c7d2e9b8_add_external_libraries.py  a4c7e9b2d5f1_saved_views_and_model_stars.py  a4c8e2f6b1d3_oidc_identity.py  ab4f6d9e2c31_add_share_revision_scope.py  b2c8d4e6f1a0_add_collection_permissions.py  b2d8f1a6c3e4_spoolman_filament_sync.py  b2d8f6a1c94e_repair_orphan_fk_rows.py  b5d9f3a7c2e4_oidc_runtime_config.py  b7c9a8d2e1f4_add_printer_file_inventory.py  b7e3f1a2c9d4_add_currency_config.py  b8e2f4a7c1d9_prusalink_and_printer_variants.py  c2f6a3e9b8d4_add_gcode_revision_labels.py  c3e9a7d1f5b2_spoolman_write_force.py  c4d2f8a1b6e3_external_library_schedule_watch.py  c5e1a9f3b0d2_print_jobs_adhoc_printer.py  c9f3a5b7d2e1_elegoo_centauri_provider.py  d1a4e7c2f6b9_printer_model_name_fields.py  d4a7c2e9b6f1_add_richer_print_metadata.py  d4f1b8c2e6a7_collection_readme.py  d5e3a9c2f1b7_fix_watch_mode_enum_names.py  d7f3a9c1e504_share_links_filament_step.py  e2b6c9a4f7d3_octoprint_provider.py  e2d4f6a8b0c1_encrypt_persisted_credentials.py  e6f4a2b8c1d9_add_notifications.py  e8d1c5b3a7f2_backfill_recommended_gcode.py  (+5 more)
backend/app/: main.py
backend/app/core/: body_limit.py  config.py  http.py  http_client.py  logging.py  metrics.py  ratelimit.py  secrets.py  security.py  time.py  url_safety.py
backend/app/db/: encrypted.py  migrate.py  models.py  scopes.py  session.py
backend/app/schemas/: auth.py  documents.py  fleet.py  ingest.py  models.py  plates.py  printers.py  saved_views.py  setup.py  share.py
backend/app/services/: audit.py  auth.py  backup.py  bgcode.py  browser_fetch.py  elegoo_centauri.py  external_library.py  filament.py  filament_sync.py  fleet.py  gcode_parser.py  gcode_rust.py  hashing.py  import_resolvers.py  importer.py  ingestion.py  job_import.py  jobs.py  library_transfer.py  library_watcher.py  lifecycle.py  makerworld_auth.py  mesh_processing.py  mesh_render.py  model_views.py  moonraker.py  notification_renderers.py  notifications.py  octoprint.py  oidc.py  print_results.py  printer_files.py  printer_hub.py  printer_jobs.py  printer_provider.py  profile_detection.py  prusalink.py  raster_rust.py  rbac.py  realtime.py  (+14 more)
backend/rust/: BUILD.md  Cargo.toml  pyproject.toml
backend/rust/src/: gcode.rs  lib.rs  (+1 more)
backend/scripts/: bench_api.py  seed_demo.py
backend/tests/: conftest.py  test_admin_api.py  test_api_hardening.py  test_audit_redaction.py  test_auth_api.py  test_auth_services.py  test_backup_restore.py  test_bambu_integration.py  test_batch_actions.py  test_bgcode.py  test_browser_fetch.py  test_collection_import_status.py  test_collection_rbac.py  test_collection_readme.py  test_config_currency.py  test_documents.py  test_elegoo_centauri.py  test_elegoo_centauri_integration.py  test_external_libraries.py  test_external_libraries_integration.py  test_external_trash_corner_cases.py  test_filament_profiles.py  test_filament_sync.py  test_files_api.py  test_files_plates_endpoint.py  test_fleet_api.py  test_fleet_over_emulators.py  test_gc.py  test_gcode_parser.py  test_hashing.py  test_import_and_formats.py  test_import_progress.py  test_import_resolvers.py  test_ingest_api.py  test_ingestion_3mf_thumbnail.py  test_ingestion_atomicity.py  test_job_import.py  test_jobs.py  test_jwt_secret.py  test_library_transfer.py  (+63 more)
(+389 files in other folders)
