[project]
name = "nexus3d-vault"
version = "0.1.0"
description = "Nexus3D Vault — self-hosted 3D printing asset manager"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "lxml>=5.3",
    "networkx>=3.2",
    "numpy>=1.26,<2",
    "pillow>=10.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "trimesh>=4.4",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
]
