[project]
name = "printstash"
version = "0.11.0"
description = "PrintStash — self-hosted 3D printing asset manager"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "bcrypt>=5.0.0",
    "boto3>=1.35",
    # STEP/STP tessellation (OpenCASCADE). Wheel-only with no Linux aarch64
    # build, so it is excluded there; STEP preview/thumbnails degrade gracefully
    # on ARM Linux while the rest of the app builds and runs. See
    # docs/known-limitations.md.
    "cascadio>=0.0.14; sys_platform != 'linux' or platform_machine != 'aarch64'",
    "croniter>=3.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "lxml>=5.3",
    "networkx>=3.2",
    "numpy>=1.26,<2",
    "orjson>=3.10",
    "paho-mqtt>=2.1",
    # Stealth-patched Playwright: renders Cloudflare-gated pages (MakerWorld)
    # server-side so collection/model imports work without a pasted cookie. The
    # Chromium binary is installed in the Dockerfile, not via pip. See
    # services/browser_fetch.py.
    "patchright>=1.49",
    "pillow>=10.4",
    "prometheus-client>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "PyJWT>=2.10",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9",
    "sqlmodel>=0.0.22",
    "trimesh>=4.4",
    "uvicorn[standard]>=0.30",
    "watchfiles>=0.24",
    "websockets>=13",
    "pycentauri==0.6.5",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8",
    "httpx-ws>=0.7",
    "pip-audit>=2.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-randomly>=3.15",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
addopts = "--capture=sys"
markers = [
    "e2e: end-to-end tests that boot the real app against contract-enforcing fakes (slower; run with `pytest tests/e2e`)",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B008"]  # FastAPI Depends() in argument defaults is the standard pattern
