[package]
name = "nexus3d-rust"
version = "0.1.0"
edition = "2021"
description = "PrintStash — Rust acceleration for G-code parsing and thumbnail rasterisation"

[lib]
name = "_nexus3d_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rayon = "1.10"
regex = "1.11"
sha2 = "0.10"
base64 = "0.22"
memchr = "2.7"
