[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "nexus3d-rust"
version = "0.1.0"
description = "Nexus3D Vault — Rust acceleration module"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "_nexus3d_rust"
python-source = "."
manifest-path = "Cargo.toml"
